fixes centering on ios

--- a/src/components/sudoku-core/board.css
+++ b/src/components/sudoku-core/board.css
@@ -353,7 +353,7 @@
 
 .yaws .control-panel button span 
 {
-    display:            inline-flex;
+    display:            flex;
     align-items:        center;
     justify-content:    center;
     width:              100%;
